WIP: saving local changes before merging main